--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "author": "John Griebel <john@johngriebel.com>",
   "description": "A cross-platform graphical user interface for the Opulo project",
-  "license": null,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/johngriebel/opulo-ui.git"
+  },
+  "license": "GNU General Public License v3.0",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
@@ -57,6 +61,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bulma": "^0.7.1",
     "npm": "^6.4.1",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
